--- a/tiger.html
+++ b/tiger.html
@@ -10,7 +10,7 @@ This is my caat. He is around 10 years old and he is my favorite out of all 4 ca
 
 <img src="tiger.jpg"> 
 <br>
-<a href="homepage.html">Homepage</a>
+<a href="index.html">Homepage</a>
 
     </body>
 </html>
