--- a/homepage.html
+++ b/homepage.html
@@ -9,10 +9,9 @@
 	
 	<img src="friends.jpg"> 
 	
-	<p>Welcome to my personal website. I have no idea what I'm doing and I hate coding with a passion. Don't hire me for coding. I'm a second year at the University of Maine.</p>
+	<p>I'm a second year at the University of Maine. I just transferred to the Business school for a major in business management. </p>
 	<br>
 	<ul>
-	<a href="https://umaine.edu">UMaine</a>
 	<br>
 	<a href="tiger.html">My Cat</a> 
 	<br>
