--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <title>Mindy Fenn</title>
     </head>
+	<link href="styles.css" rel="stylesheet">
+
     <body>
 
     <h1> Hi, I'm Mindy Fenn. </h1> 
 	
 	<img src="friends.jpg"> 
 	
-	<p>Welcome to my personal website. I have no idea what I'm doing and I hate coding with a passion. Don't hire me for coding. I'm a second year at the University of Maine.</p>
+	<p>I am a second year student at the University of Maine. I am from Charleston Maine but I moved to Old Town, Maine in the summer of 2016. I am 19 years old. I'm currently going for my bachelor's degree in Business Management but my long-term goal is to own my own hair salon.  </p>
 	<br>
 	<ul>
 	<a href="https://umaine.edu">UMaine</a>
@@ -20,7 +22,6 @@
 	
 	</ul>
 	
-
 	
     </body>
 	
